--- a/app/src/main/res/xml/settings_preferences.xml
+++ b/app/src/main/res/xml/settings_preferences.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+<PreferenceScreen
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
     <PreferenceCategory>
+
         <SwitchPreference
             android:key="switch"
             android:title="Notifications"
+            android:text="Notifications"
             android:icon="@drawable/ic_notifications"
             android:defaultValue="true">
         </SwitchPreference>
