--- a/app/src/main/res/layout/learn_video_card.xml
+++ b/app/src/main/res/layout/learn_video_card.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content">
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/learnVideoCardHolder"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
