progress on explore

--- a/app/src/main/res/layout/fragment_explore.xml
+++ b/app/src/main/res/layout/fragment_explore.xml
@@ -51,24 +51,44 @@
                     android:gravity="center|top" />
 
             </LinearLayout>
-            <androidx.recyclerview.widget.RecyclerView
-                android:layout_marginTop="20dp"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/rv_categorylist1"
-                android:layout_below="@id/carouselbody">
-            </androidx.recyclerview.widget.RecyclerView>
-
             <LinearLayout
-                android:id="@+id/small_industry_container"
+                android:id="@+id/rv_productlist1_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_below="@+id/rv_categorylist1"
+                android:layout_below="@+id/carouselbody"
                 android:layout_marginTop="25dp">
 
                 <TextView
-                    android:id="@+id/small_industry_label"
+                    android:id="@+id/rv_productlist1_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginBottom="20dp"
+                    android:fontFamily="@font/brandontext_medium"
+                    android:text="@string/newly_launched_products"
+                    android:textColor="@color/heading_dark"
+                    android:textSize="24sp" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:layout_marginTop="2dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp"
+                    android:id="@+id/rv_productlist1">
+                </androidx.recyclerview.widget.RecyclerView>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/rv_companyexp1_container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_below="@+id/rv_productlist1_container"
+                android:layout_marginTop="25dp">
+
+                <TextView
+                    android:id="@+id/rv_companyexp1_label"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
@@ -78,21 +98,22 @@
                     android:textColor="@color/heading_dark"
                     android:textSize="24sp" />
 
-                <androidx.recyclerview.widget.RecyclerView
+                <com.example.neelanshsethi.recko.Misc.RecyclerViewCustom
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:id="@+id/rv_small_industry1">
+                    android:id="@+id/rv_companyexp1">
 
-                </androidx.recyclerview.widget.RecyclerView>
+                </com.example.neelanshsethi.recko.Misc.RecyclerViewCustom>
 
             </LinearLayout>
+
 
             <androidx.recyclerview.widget.RecyclerView
                 android:layout_marginTop="20dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:id="@+id/rv_categorylist2"
-                android:layout_below="@id/small_industry_container">
+                android:layout_below="@id/rv_companyexp1_container">
             </androidx.recyclerview.widget.RecyclerView>
 
             <LinearLayout
