--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="white">#ffffff</color>
     <color name="transparent">#00ffffff</color>
     <color name="background">#dddddd</color>
+    <color name="gray">#d3d3d3</color>
 </resources>
