--- a/app/src/main/res/layout/activity_edit_account_details.xml
+++ b/app/src/main/res/layout/activity_edit_account_details.xml
@@ -19,37 +19,26 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/edit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="16dp"
-            android:src="@drawable/icon_edit"
-            android:tint="@color/heading_lighter"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/acc_detail" />
-
         <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/appbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/white"
-        android:elevation="4dp">
-
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
+            android:id="@+id/appbar"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:theme="@style/CustomToolbar"
-            app:navigationIcon="@drawable/back"
-            app:title="Accounts"
-            app:titleTextAppearance="@style/BrandonTextAppearance"
-            app:titleTextColor="@color/heading_dark"></androidx.appcompat.widget.Toolbar>
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:elevation="4dp">
 
-    </com.google.android.material.appbar.AppBarLayout>
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:theme="@style/CustomToolbar"
+                app:navigationIcon="@drawable/back"
+                app:title="Edit Account"
+                app:titleTextAppearance="@style/BrandonTextAppearance"
+                app:titleTextColor="@color/heading_dark"></androidx.appcompat.widget.Toolbar>
+
+        </com.google.android.material.appbar.AppBarLayout>
 
         <TextView
             android:id="@+id/acc_detail"
@@ -70,16 +59,17 @@
             android:layout_marginTop="32dp"
             android:fontFamily="@font/brandontext_regular"
             android:text="Payee Name"
+            android:textSize="16sp"
             app:layout_constraintStart_toStartOf="@+id/acc_detail"
             app:layout_constraintTop_toBottomOf="@+id/acc_detail" />
 
-        <TextView
-            android:id="@+id/textView11"
-            android:layout_width="wrap_content"
+        <EditText
+            android:id="@+id/payee_name"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            android:fontFamily="@font/brandontext_regular"
-            android:text="A/C Number"
+            android:layout_marginTop="8dp"
+            android:fontFamily="@font/brandontext_medium"
+            android:textSize="18sp"
             app:layout_constraintStart_toStartOf="@+id/textView14"
             app:layout_constraintTop_toBottomOf="@+id/textView14" />
 
@@ -89,69 +79,81 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
             android:fontFamily="@font/brandontext_regular"
-            android:text="Bank"
-            app:layout_constraintStart_toStartOf="@+id/textView11"
-            app:layout_constraintTop_toBottomOf="@+id/textView11" />
+            android:text="A/C Number"
+            android:textSize="16sp"
+            app:layout_constraintStart_toStartOf="@+id/payee_name"
+            app:layout_constraintTop_toBottomOf="@+id/payee_name" />
+
+        <EditText
+            android:id="@+id/account_no"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:fontFamily="@font/brandontext_medium"
+            android:textSize="18sp"
+            app:layout_constraintStart_toStartOf="@+id/textView16"
+            app:layout_constraintTop_toBottomOf="@+id/textView16" />
 
         <TextView
-            android:id="@+id/TextView18"
+            android:id="@+id/textView10"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:fontFamily="@font/brandontext_regular"
+            android:text="Bank"
+            android:textSize="16sp"
+            app:layout_constraintStart_toStartOf="@+id/account_no"
+            app:layout_constraintTop_toBottomOf="@+id/account_no" />
+
+        <EditText
+            android:id="@+id/bank_name"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:fontFamily="@font/brandontext_medium"
+            android:textSize="18sp"
+            app:layout_constraintStart_toStartOf="@+id/textView10"
+            app:layout_constraintTop_toBottomOf="@+id/textView10" />
+
+        <TextView
+            android:id="@+id/testView12"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
             android:fontFamily="@font/brandontext_regular"
             android:text="IFSC"
-            app:layout_constraintStart_toStartOf="@+id/textView16"
-            app:layout_constraintTop_toBottomOf="@+id/textView16" />
-
-        <TextView
-            android:id="@+id/payee_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:fontFamily="@font/brandontext_medium"
-            android:textSize="16sp"
-            app:layout_constraintStart_toEndOf="@+id/textView14"
-            app:layout_constraintTop_toTopOf="@+id/textView14" />
-
-        <TextView
-            android:id="@+id/account_no"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/brandontext_medium"
-            android:textSize="16sp"
-            app:layout_constraintStart_toStartOf="@+id/payee_name"
-            app:layout_constraintTop_toTopOf="@+id/textView11" />
-
-        <TextView
-            android:id="@+id/bank_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/brandontext_medium"
-            android:textSize="16sp"
-            app:layout_constraintStart_toStartOf="@+id/account_no"
-            app:layout_constraintTop_toTopOf="@+id/textView16" />
-
-        <TextView
-            android:id="@+id/ifsc_code"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/brandontext_medium"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="@+id/bank_name"
-            app:layout_constraintTop_toTopOf="@+id/TextView18" />
+            app:layout_constraintTop_toBottomOf="@+id/bank_name" />
 
-        <View
-            android:id="@+id/SplitLine_hor1"
+        <EditText
+            android:id="@+id/ifsc_code"
             android:layout_width="300dp"
-            android:layout_height="2dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:fontFamily="@font/brandontext_medium"
+            android:textSize="18sp"
+            app:layout_constraintStart_toStartOf="@+id/testView12"
+            app:layout_constraintTop_toBottomOf="@+id/testView12" />
+
+        <Button
+            android:id="@+id/save"
+            android:layout_width="wrap_content"
+            android:layout_height="45dp"
+            android:layout_centerHorizontal="true"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
-            android:background="@color/gray"
+            android:background="@drawable/round_button"
+            android:fontFamily="@font/brandontext_bold"
+            android:stateListAnimator="@animator/button_animator"
+            android:text="@string/save"
+            android:textAllCaps="false"
+            android:textColor="#fff"
+            android:textSize="22sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.367"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/TextView18" />
+            app:layout_constraintTop_toBottomOf="@+id/ifsc_code" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </RelativeLayout>
