--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -338,12 +338,14 @@
                         android:id="@+id/actual_price"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginEnd="32dp"
                         android:fontFamily="@font/brandontext_regular"
                         android:text="@string/u20b915000"
-                        android:textColor="@color/heading_light"
+                        android:textColor="@color/heading_dark"
                         android:textSize="18sp"
                         android:textStyle="bold"
                         app:layout_constraintBottom_toBottomOf="@+id/textView6"
+                        app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="@+id/offer_price"
                         app:layout_constraintTop_toTopOf="@+id/textView6" />
 
@@ -403,7 +405,7 @@
                     <com.google.android.material.chip.Chip
                         android:id="@+id/chip_discount1"
                         style="@style/Widget.MaterialComponents.Chip.Action"
-                        android:layout_width="70dp"
+                        android:layout_width="80dp"
                         android:layout_height="40dp"
                         android:layout_marginTop="8dp"
                         android:checkable="false"
@@ -413,7 +415,7 @@
                         android:paddingLeft="-5dp"
                         android:paddingTop="5dp"
                         android:paddingBottom="5dp"
-                        android:text="@string/u20b9100"
+                        android:text="@string/dis100"
                         android:textAppearance="@style/WhatsappChipAppearance2"
                         android:textColor="@color/colorPrimary"
                         app:chipBackgroundColor="#F5F5F5"
@@ -429,7 +431,7 @@
                     <com.google.android.material.chip.Chip
                         android:id="@+id/chip_discount2"
                         style="@style/Widget.MaterialComponents.Chip.Action"
-                        android:layout_width="70dp"
+                        android:layout_width="80dp"
                         android:layout_height="40dp"
                         android:checkable="false"
                         android:clickable="true"
@@ -438,7 +440,7 @@
                         android:paddingLeft="-5dp"
                         android:paddingTop="5dp"
                         android:paddingBottom="5dp"
-                        android:text="@string/u20b9100"
+                        android:text="@string/dis200"
                         android:textAppearance="@style/WhatsappChipAppearance2"
                         android:textColor="@color/colorPrimary"
                         app:chipBackgroundColor="#F5F5F5"
@@ -454,7 +456,7 @@
                     <com.google.android.material.chip.Chip
                         android:id="@+id/chip_discount3"
                         style="@style/Widget.MaterialComponents.Chip.Action"
-                        android:layout_width="70dp"
+                        android:layout_width="80dp"
                         android:layout_height="40dp"
                         android:checkable="false"
                         android:clickable="true"
@@ -463,7 +465,7 @@
                         android:paddingLeft="-5dp"
                         android:paddingTop="5dp"
                         android:paddingBottom="5dp"
-                        android:text="@string/u20b9100"
+                        android:text="@string/dis500"
                         android:textAppearance="@style/WhatsappChipAppearance2"
                         android:textColor="@color/colorPrimary"
                         app:chipBackgroundColor="#F5F5F5"
@@ -479,7 +481,7 @@
                     <com.google.android.material.chip.Chip
                         android:id="@+id/chip_discount4"
                         style="@style/Widget.MaterialComponents.Chip.Action"
-                        android:layout_width="70dp"
+                        android:layout_width="80dp"
                         android:layout_height="40dp"
                         android:checkable="false"
                         android:clickable="true"
@@ -488,7 +490,7 @@
                         android:paddingLeft="-5dp"
                         android:paddingTop="5dp"
                         android:paddingBottom="5dp"
-                        android:text="@string/u20b9100"
+                        android:text="@string/dis1000"
                         android:textAppearance="@style/WhatsappChipAppearance2"
                         android:textColor="@color/colorPrimary"
                         app:chipBackgroundColor="#F5F5F5"
