--- a/app/src/main/res/layout/active_leads_card.xml
+++ b/app/src/main/res/layout/active_leads_card.xml
@@ -23,6 +23,7 @@
             android:layout_height="match_parent"
             app:cardElevation="2dp"
             app:cardCornerRadius="12dp"
+            android:id="@+id/lead_card"
             app:cardUseCompatPadding="true">
 
             <androidx.constraintlayout.widget.ConstraintLayout
