--- a/app/src/main/res/layout/activity_lead_info.xml
+++ b/app/src/main/res/layout/activity_lead_info.xml
@@ -145,6 +145,18 @@
             android:inputType="textMultiLine|textNoSuggestions"
             app:layout_constraintStart_toStartOf="@+id/textView22"
             app:layout_constraintTop_toBottomOf="@+id/textView22" />
+
+        <View
+            android:id="@+id/SplitLine_hor1"
+            android:layout_width="300dp"
+            android:layout_height="2dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginEnd="8dp"
+            android:background="@color/gray"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/Notes" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </RelativeLayout>
