--- a/app/src/main/res/layout/missed_follow_ups_card.xml
+++ b/app/src/main/res/layout/missed_follow_ups_card.xml
@@ -13,9 +13,10 @@
         android:layout_marginBottom="10dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/lead_card"
             android:layout_width="0dp"
-            android:layout_height="0dp"
 
+            android:layout_height="0dp"
             app:layout_constraintDimensionRatio="244:78"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent">
